# Cloud

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
android-rootapp/app/: build.gradle.kts
android-rootapp/app/src/main/java/com/yourorg/batteryplatform/data/: ApiService.kt
app/: db.py  main.py  models.py  schemas.py  websocket_manager.py
app/api/: battery.py
backend/: Dockerfile  docker-compose.yml  requirements.txt
backend/app/: config.py  db.py  dependencies.py  main.py  models.py  schemas.py
backend/app/crud/: battery.py
backend/app/routers/: battery.py  ws.py
backend/app/services/: websocket_manager.py
shared/api-schema/: battery.yaml
tests/: test_api.py  test_ws.py
web-client/: package.json
