[tool.poetry]
name = "cloud"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
sqlmodel = "^0.0.14"
psycopg = {extras = ["binary"], version = "^3.1.12"}
uvicorn = {extras = ["standard"], version = "^0.27.1"}
redis = "^5.0.0"
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.2"
httpx = "^0.25.0"
fakeredis = "^2.23.2"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
